<resources>
    <string name="app_name">FindFlights</string>
    <string name="find_flights">Find flights</string>
    <string name="number_of_teens">Number of teens</string>
    <string name="number_of_children">Number of children</string>
    <string name="origin_station">Origin station</string>
    <string name="destination_station">Destination station</string>
    <string name="search">Search</string>
    <string name="number_of_adults">Number of adults</string>
    <string name="retry">Retry</string>
    <string name="stations_download_error">Getting available stations failed!</string>

    <string name="id" translatable="false">#%s</string>
    <string name="percent" translatable="false">%d%%</string>
    <string name="empty_flights">No flights found with this search criteria, go back and try different date or set different price filter.</string>
    <string name="flights_error">Flight search failed. Check internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="flight_details">Flight details</string>
    <string name="flight_number">Flight number</string>
    <string name="flight_date">Flight date</string>
    <string name="duration">Duration</string>
    <string name="full_price">Full price</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="infants_left">Infants left</string>
    <string name="fare_class">Fare class</string>
    <string name="adults">Adults</string>
    <string name="teens">Teens</string>
    <string name="childs">Childs</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <plurals name="x_adults">
        <item quantity="one">%d adult</item>
        <item quantity="other">%d adults</item>
    </plurals>
    <plurals name="x_teens">
        <item quantity="one">%d teen</item>
        <item quantity="other">%d teens</item>
    </plurals>
    <plurals name="x_childs">
        <item quantity="one">%d child</item>
        <item quantity="other">%d childs</item>
    </plurals>
    <string name="max_price">Max ticket price: %d</string>
</resources>
