<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="eu.wawrzyczek.findflights.search.FlightSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.FlightSearchActivity"
        tools:layout_editor_absoluteY="81dp">

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/teensLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/number_of_teens"
                    app:layout_constraintBottom_toBottomOf="@+id/teens"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/teens" />

                <TextView
                    android:id="@+id/childrenLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/number_of_children"
                    app:layout_constraintBottom_toBottomOf="@+id/children"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/children" />

                <Spinner
                    android:id="@+id/teens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:dropDownWidth="@dimen/dropdown_width"
                    android:selectedItemPosition="@={vm.teens}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/teensLabel"
                    app:layout_constraintTop_toBottomOf="@+id/adults" />

                <Spinner
                    android:id="@+id/children"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:dropDownWidth="@dimen/dropdown_width"
                    android:selectedItemPosition="@={vm.children}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/childrenLabel"
                    app:layout_constraintTop_toBottomOf="@+id/teens"
                    app:layout_constraintVertical_bias="0.0" />

                <AutoCompleteTextView
                    android:id="@+id/origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_origin"
                    android:drawableEnd="@{vm.origin.valid ? null : @drawable/ic_error}"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/origin_station"
                    android:lines="1"
                    android:text="@{vm.origin.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_destination"
                    android:drawableEnd="@{vm.destination.valid ? null : @drawable/ic_error}"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/destination_station"
                    android:lines="1"
                    android:text="@{vm.destination.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/origin" />

                <Spinner
                    android:id="@+id/adults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:dropDownWidth="@dimen/dropdown_width"
                    android:selectedItemPosition="@={vm.adults}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/adultsLabel"
                    app:layout_constraintTop_toBottomOf="@+id/departureDate" />

                <EditText
                    android:id="@+id/departureDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:text="@{vm.departureDate.formattedString}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/destination" />


                <TextView
                    android:id="@+id/adultsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/number_of_adults"
                    app:layout_constraintBottom_toBottomOf="@+id/adults"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/adults"
                    app:layout_constraintVertical_bias="0.6" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/search"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{vm.valid}"
            android:onClick="@{(v) -> vm.search()}"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>